edits data format and line chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -109,7 +109,7 @@
         </mat-vertical-stepper>
 </div>
 
-<app-linechart *ngIf="graphData" [data]="graphData"></app-linechart>
+<div class="top-wrapper"></div>
 
 
 
