changes to d3 graph

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -107,8 +107,10 @@
                 </div>
                 </mat-step>
         </mat-vertical-stepper>
+        <p *ngIf="postError">We're sorry, something went wrong with your submission!</p>
 </div>
 
+<div class="projection-title"><h4>Cost of Regular Grid Power vs. Solar Panel Array</h4></div>
 <div class="top-wrapper"></div>
 
 
