--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -106,3 +106,37 @@ body {
         font-weight: 700;
     }
 }
+
+.sunroof-image {
+    width: 350px; /* width of container */
+    height: 350px; /* height of container */
+    object-fit: cover;
+    object-position: 80% 120%;
+}
+
+.scraper-delay {
+    min-height: 300px;
+    display: flex;
+    justify-content: center;
+}
+
+
+@keyframes spinner {
+    to {transform: rotate(360deg);}
+  }
+   
+  .spinner:before {
+    content: '';
+    box-sizing: border-box;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    margin-top: 170px;
+    margin-left: -50px;
+    border-radius: 50%;
+    border: 2px solid #ffffff;
+    border-top-color: #000000;
+    animation: spinner .8s linear infinite;
+  }
