--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -93,6 +93,20 @@ body {
     }
 }
 
+.manualDraw {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .orientation {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        vertical-align: middle;
+        align-items: center;
+    }
+}
+
 .top-wrapper {
     margin: auto;
     display: flex;
@@ -112,12 +126,6 @@ body {
     height: 350px; /* height of container */
     object-fit: cover;
     object-position: 80% 120%;
-}
-
-.scraper-delay {
-    min-height: 300px;
-    display: flex;
-    justify-content: center;
 }
 
 
@@ -176,7 +184,6 @@ body {
     justify-content: space-between;
     vertical-align: middle;
     align-items: flex-end;
-    padding: 1.5em 0em;
   }
 
   .drawModeNotice {
@@ -226,7 +233,7 @@ body {
     margin: 3em auto;
     display: flex;
     flex-direction: column;
-    max-width: 400px;
+    max-width: 600px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -234,4 +241,116 @@ body {
     button {
         max-width: 200px;
     }
+  }
+
+  .readyToSubmit {
+      margin: 3em auto;
+      display: flex;
+      flex-direction: column;
+      max-width: 400px;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+  }
+
+  .scraper-delay {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      min-height: 150px;
+
+      p {
+          margin-bottom: 3em;
+      }
+  }
+
+  .alert-sizeestimate {
+        margin: 3em 0;
+        padding: .75rem 1.25rem;
+        margin-bottom: 1rem;
+        border: 1px solid transparent;
+        border-radius: .25rem;
+        // max-width: 375px;
+
+        p {
+            position: relative;
+            padding: .75rem 1.25rem;
+            margin-bottom: 1rem;
+            border: 1px solid transparent;
+        }
+  }
+
+  .confirmButton {
+    margin: -2em 2em 1em 1.5em;
+    color: #fff;
+    background: #28a745;
+  }
+
+  .readyRun {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      align-items: center;
+
+      p {
+          margin-bottom: 3em;
+      }
+  }
+
+  mat-spinner {
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      align-items: center;
+  }
+
+  .orientation-value {
+      font-weight: 700;
+      margin-left: 1em;
+  }
+
+  .noheading {
+    border: 2px solid #ff5722;
+    padding: 0.5em 1em;
+    color: #ff5722;
+    background-color: transparent;
+  }
+
+  .heading {
+    border: 2px solid #28a745;
+    padding: 0.5em 1em;
+    color: #28a745;
+    background-color: transparent;
+  }
+
+  #logout-button-holder {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .confirmaz:disabled {
+    color: #fff !important;
+    background-color: #28a74648 !important;
+  }
+
+  .confirmaz {
+    color: #fff !important;
+    background-color: #28a746 !important;
+  }
+
+  .orientbtn {
+      margin-right: 1em;
+  }
+
+  #sunroof-square-feet, .feet {
+      color: #28a745;
+      background: transparent;
+  }
+
+  .orientation {
+      display: flex;
+      flex-direction: row;
   }
