--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,7 @@ mat-dialog-container#modal-component {
     font-size: 1em;
     font-family: 'Roboto', 'Arial', sans-serif;
   }
+
+.x-axis path, .y-axis path {
+    stroke: #6c757d
+}
